log4j cleanup, mostly

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,7 +1,5 @@
 #
-# Copyright (c) 2001-2008 David Soergel
-# 418 Richmond St., El Cerrito, CA  94530
-# dev@davidsoergel.com
+# Copyright (c) 2007 Regents of the University of California
 #
 # All rights reserved.
 #
@@ -13,9 +11,9 @@
 #     * Redistributions in binary form must reproduce the above copyright
 #       notice, this list of conditions and the following disclaimer in the
 #       documentation and/or other materials provided with the distribution.
-#     * Neither the name of the author nor the names of any contributors may
-#       be used to endorse or promote products derived from this software
-#       without specific prior written permission.
+#     * Neither the name of the University of California, Berkeley nor the
+#       names of its contributors may be used to endorse or promote products
+#       derived from this software without specific prior written permission.
 #
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 # "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
@@ -30,8 +28,17 @@
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-log4j.rootLogger=DEBUG, Console, File
- ## Chainsaw
+
+
+####################
+# FOR TESTING ONLY #
+####################
+
+
+#log4j.rootLogger=DEBUG, Console, File
+log4j.rootLogger=TRACE,Console
+#,File,Chainsaw
+
 
 
 ## Configure message levels based on Java package structure
@@ -39,10 +46,11 @@ log4j.rootLogger=DEBUG, Console, File
 log4j.logger.edu.berkeley.compbio.jlibsvm=INFO
 
 
+
 ## Configure the Console Appender
 
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
-log4j.appender.Console.Threshold=DEBUG
+log4j.appender.Console.Threshold=INFO
 # Print the date in ISO 8601 format
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
@@ -52,7 +60,9 @@ log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.appender.File=org.apache.log4j.RollingFileAppender
 # This path is relative to the working directory
-log4j.appender.File.File=phyloutils.log
+log4j.appender.File.File=msensr.log
+
+log4j.appender.File.Threshold=DEBUG
 
 # Keep 4 backup files of 5MB each
 log4j.appender.File.MaxBackupIndex=4
@@ -61,9 +71,12 @@ log4j.appender.File.layout=org.apache.log4j.PatternLayout
 log4j.appender.File.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 
-## Configure the Chainsaw Appender (for IDEA IntelliJ development)
+## Configure the Chainsaw Appender
 
 log4j.appender.Chainsaw=org.apache.log4j.net.SocketAppender
+log4j.appender.Chainsaw.Threshold=TRACE
 log4j.appender.Chainsaw.remoteHost=localhost
-log4j.appender.Chainsaw.port=4445
+log4j.appender.Chainsaw.port=4560
 log4j.appender.Chainsaw.locationInfo=true
+
+
