--- a/pom.xml
+++ b/pom.xml
@@ -112,5 +112,10 @@
             <artifactId>collections</artifactId>
             <version>20080321</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.javolution</groupId>
+            <artifactId>javolution</artifactId>
+            <version>5.2.6</version>
+        </dependency>-->
     </dependencies>
 </project>
