--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -43,7 +43,7 @@ log4j.rootLogger=TRACE,Console
 
 ## Configure message levels based on Java package structure
 
-log4j.logger.edu.berkeley.compbio.jlibsvm=INFO
+log4j.logger.edu.berkeley.compbio.jlibsvm=TRACE
 
 
 
@@ -60,7 +60,7 @@ log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.appender.File=org.apache.log4j.RollingFileAppender
 # This path is relative to the working directory
-log4j.appender.File.File=msensr.log
+log4j.appender.File.File=jlibsvm.log
 
 log4j.appender.File.Threshold=DEBUG
 
