Code cleanup and reformatting etc.; also reworking how grid searches and cross-validation are done

--- a/pom.xml
+++ b/pom.xml
@@ -108,9 +108,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.google</groupId>
-            <artifactId>collections</artifactId>
-            <version>20080321</version>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>0.9</version>
         </dependency>
         <!--<dependency>
             <groupId>org.javolution</groupId>
