--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -43,14 +43,16 @@ log4j.rootLogger=TRACE,Console
 
 ## Configure message levels based on Java package structure
 
-log4j.logger.edu.berkeley.compbio.jlibsvm=TRACE
+log4j.logger.edu.berkeley.compbio.jlibsvm=INFO
+log4j.logger.com.davidsoergel=INFO
+#log4j.logger.com.davidsoergel.dsutils.concurrent=TRACE
 
 
 
 ## Configure the Console Appender
 
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
-log4j.appender.Console.Threshold=INFO
+log4j.appender.Console.Threshold=TRACE
 # Print the date in ISO 8601 format
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
