--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
             <artifactId>google-collections</artifactId>
             <version>0.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.davidsoergel</groupId>
+            <artifactId>dsutils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--<dependency>
             <groupId>org.javolution</groupId>
             <artifactId>javolution</artifactId>
