--- a/pom.xml
+++ b/pom.xml
@@ -112,12 +112,24 @@
       <artifactId>google-collections</artifactId>
       <version>1.0-rc2</version>
     </dependency>
+    <dependency>
+      <groupId>com.davidsoergel</groupId>
+      <artifactId>dsutils</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
 
     <dependency>
       <groupId>edu.berkeley.compbio</groupId>
       <artifactId>ml</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.intellij</groupId>
+      <artifactId>annotations</artifactId>
+      <version>7.0.3</version>
+      <scope>compile</scope>
+    </dependency>
+
     <!--<dependency>
       <groupId>org.javolution</groupId>
       <artifactId>javolution</artifactId>
