--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.davidsoergel</groupId>
+      <artifactId>conja</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>edu.berkeley.compbio</groupId>
       <artifactId>ml</artifactId>
       <version>0.9-SNAPSHOT</version>
