--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>dsutils</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.01</version>
     </dependency>
 
     <dependency>
