--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
   <artifactId>jlibsvm</artifactId>
 
   <name>jlibsvm</name>
-  <version>0.9</version>
+  <version>0.91-SNAPSHOT</version>
   <url>http://dev.davidsoergel.com/jlibsvm</url>
   <description>Java port of the libsvm library for Support Vector Machines.
   </description>
@@ -59,8 +59,8 @@
 
 
   <scm>
-    <connection>scm:svn:http://svn.davidsoergel.com/repos/jlibsvm/tags/jlibsvm-0.9</connection>
-    <developerConnection>scm:svn:svn+ssh://svn.davidsoergel.com/home/svn/repos-compbio/jlibsvm/tags/jlibsvm-0.9</developerConnection>
+    <connection>scm:svn:http://svn.davidsoergel.com/repos/jlibsvm</connection>
+    <developerConnection>scm:svn:svn+ssh://svn.davidsoergel.com/home/svn/repos-compbio/jlibsvm</developerConnection>
   </scm>
 
 
