--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
     <dependency>
       <groupId>edu.berkeley.compbio</groupId>
       <artifactId>ml</artifactId>
-      <version>0.9</version>
+      <version>0.91-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.intellij</groupId>
