--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>conja</artifactId>
-      <version>1.05</version>
+      <version>1.06-SNAPSHOT</version>
     </dependency>
 
     <dependency>
